2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to quiet compiler warnings.

	* programs/benchmarks/sha/sha1.c,
	* programs/benchmarks/sha/sha1_alt.c: Use the standard C `assert'.

2010-06-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New `tmalloc' demo for memory allocation.

	* demo/tmalloc.c: New.
	* demo/Makefile.am: Update accordingly.

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update check expectations.
	
	* benchmarks/sha/sha1_alt.c: Expect failure for naked mta targets.

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Use standard C header names in programs.

	* benchmarks/blas/blasbench.h,
	* benchmarks/blas/templates/xasum.c,
	* benchmarks/blas/templates/xiamax.c,
	* benchmarks/blas/templates/xnrm2.c,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/lib/benchmark.c,
	* benchmarks/livermore/kernel15.c,
	* benchmarks/livermore/kernel2.c,
	* benchmarks/livermore/kernel22.c,
	* benchmarks/mandel/mandel.c,
	* benchmarks/quicksort/am-quicksort-iterative.c,
	* benchmarks/quicksort/am-quicksort.c,
	* benchmarks/quicksort/sah-quicksort.c,
	* benchmarks/sha/sha1.c,
	* benchmarks/sha/sha1_alt.c,
	* demo/10threads.c,
	* demo/answer.c,
	* demo/bitblt.c,
	* demo/env.c,
	* demo/fibonacci.c,
	* demo/fibre.c,
	* demo/helloworld.c,
	* demo/keyblit.c,
	* demo/pi.c,
	* demo/sep.c,
	* benchmarks/livermore/ll-generate.py (gencode): Do it.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update check expectations.

	* demo/sep.c: Remove expected failure (underlying bug was fixed).

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update check expectations.

	* benchmarks/sha/sha1.c: Expect failure for naked mta targets
	only.

	* benchmarks/sha/sha1_alt.c: Do not expect failure any more.

	* demo/sep.c: Expect failure for `mta_s' (temporary, likely due to
	underlying hardware bug).

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor cosmetic fixes.

	* benchmarks/lib/benchmark.h: Whitespace.